# routes/rtsCategories.js
@@ -1,8 +1,11 @@
 const express = require("express");
 const router = express.Router();
+const CategoriesCtrl = require("../controllers/ctrlCategories");
 
-router.get("/", (req, res) => {
-    res.send("Categories route");
-});
+router.get("/", CategoriesCtrl.getAllCategories);
+router.get("/:id", CategoriesCtrl.getCategory);
+router.post("/", CategoriesCtrl.createCategory);
+router.put("/:id", CategoriesCtrl.updateCategory);
+router.delete("/:id", CategoriesCtrl.deleteCategory);
 
 module.exports = router;
