# routes/rtsUsers.js
@@ -1,8 +1,11 @@
 const express = require("express");
 const router = express.Router();
+const UsersCtrl = require("../controllers/ctrlUsers");
 
-router.get("/", (req, res) => {
-    res.send("Users route");
-});
+router.get("/", UsersCtrl.getAllUsers);
+router.get("/:id", UsersCtrl.getUser);
+router.post("/", UsersCtrl.createUser);
+router.put("/:id", UsersCtrl.updateUser);
+router.delete("/:id", UsersCtrl.deleteUser);
 
 module.exports = router;
